Production deployment: IIS reverse proxy, SSL, smartpixl.info config

--- a/TrackingPixel.Modern/appsettings.json
+++ b/TrackingPixel.Modern/appsettings.json
@@ -7,7 +7,16 @@
   },
   "AllowedHosts": "*",
   
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://127.0.0.1:6000"
+      }
+    }
+  },
+  
   "Tracking": {
+    "BaseUrl": "https://smartpixl.info",
     "ConnectionString": "Server=localhost;Database=SmartPixl;Integrated Security=True;TrustServerCertificate=True",
     "QueueCapacity": 10000,
     "BatchSize": 100,
