Deploy: Switch to direct IIS hosting (InProcess), remove Kestrel port bindings

--- a/TrackingPixel.Modern/appsettings.json
+++ b/TrackingPixel.Modern/appsettings.json
@@ -8,10 +8,11 @@
   "AllowedHosts": "*",
   
   "Kestrel": {
-    "Endpoints": {
-      "Http": {
-        "Url": "http://127.0.0.1:6000"
-      }
+    "Limits": {
+      "MaxConcurrentConnections": 1000,
+      "MaxConcurrentUpgradedConnections": 1000,
+      "KeepAliveTimeout": "00:02:00",
+      "RequestHeadersTimeout": "00:00:30"
     }
   },
   
