Migrate to SQL2025, implement ETL service, remove Diagnostics project, add deployment docs
- Updated all connection strings to localhost\SQL2025 / SmartPiXL database
  (appsettings.json, TrackingSettings.cs compiled default)
- Implemented EtlBackgroundService (was empty) - calls usp_ParseNewHits every 60s
- Removed TrackingPixel.Diagnostics project (replaced by Tron dashboard)
- Created .github/copilot-instructions.md with full deployment checklist
- Updated smartpixl-ops and deployment-specialist agent files with current DB info
- Added ETL pipeline docs and field reference updates

--- a/TrackingPixel.Modern/appsettings.json
+++ b/TrackingPixel.Modern/appsettings.json
@@ -26,7 +26,7 @@
   
   "Tracking": {
     "BaseUrl": "https://smartpixl.info",
-    "ConnectionString": "Server=localhost;Database=SmartPixl;Integrated Security=True;TrustServerCertificate=True",
+    "ConnectionString": "Server=localhost\\SQL2025;Database=SmartPiXL;Integrated Security=True;TrustServerCertificate=True",
     "QueueCapacity": 10000,
     "BatchSize": 100,
     "BatchTimeoutMs": 100,
