Schema migration (dbo→PiXL/ETL), SQL cleanup, ETL self-healing fix
Database:
- Migrated tables to PiXL.* schema (Test, Parsed, Config, Device, Company, Pixel)
- Migrated ETL objects to ETL.* schema (Watermark, usp_ParseNewHits)
- Added self-healing watermark reconciliation to ETL proc
- All 36 views updated to reference new schema names

SQL folder cleanup:
- Removed 11 dead/superseded migration scripts (4,581 lines)
- Rewrote 05_MaintenanceProcedures.sql for PiXL.Parsed + ETL.* schemas
- Added 17B_CreateSchemas.sql (schema migration script)
- Added 18_NvarcharToVarchar.sql (performance optimization)

C# changes:
- DatabaseWriterService: dbo.PiXL_Test → PiXL.Test
- EtlBackgroundService: dbo.usp_ParseNewHits → ETL.usp_ParseNewHits
- EtlBackgroundService: ExecuteNonQuery → ExecuteReader for proper result handling
- Renamed Tier5Script → PiXLScript across Scripts/Tests
- Updated comments and docs across all services

--- a/TrackingPixel.Modern/web.config
+++ b/TrackingPixel.Modern/web.config
@@ -4,7 +4,7 @@
     <system.webServer>
       <security>
         <requestFiltering>
-          <!-- Required: Tier 5 fingerprint data is ~4000 bytes -->
+          <!-- Required: Fingerprint data is ~4000 bytes -->
           <requestLimits maxQueryString="16384" maxUrl="8192" />
         </requestFiltering>
       </security>
