Add infrastructure health monitoring with data flow & error probes
- InfraHealthService: 6 parallel probes (Windows services, SQL, websites, app runtime, data flow pipeline, IIS log errors)
- Data flow probe: tracks last insert time, hits/5min, hits/hr, ETL lag, queue depth
- Log scanner: reads IIS + dev logs for ERROR lines, deduplicates, counts per message
- Status computation: critical if data not flowing + errors, or 5+ errors/day
- Tron dashboard: error banner, data flow pipeline panel, enhanced status beacon
- Fixed schema: PiXL.Parsed uses SourceId not Id
- Added System.ServiceProcess.ServiceController NuGet package
- Suppressed CA1416 (app is Windows-only)

Root cause fix: IIS was running Feb 7 binary targeting dbo.PiXL_Test after
Feb 13 schema migration to PiXL.Test. 16 silent write failures/day.
Republished to IIS with current code - verified data flowing.

--- a/TrackingPixel.Modern/TrackingPixel.csproj
+++ b/TrackingPixel.Modern/TrackingPixel.csproj
@@ -8,11 +8,14 @@
     <ServerGarbageCollection>true</ServerGarbageCollection>
     <TieredCompilation>true</TieredCompilation>
     <TieredPGO>true</TieredPGO>
+    <!-- Suppress CA1416 (platform compatibility) — entire app is Windows-only -->
+    <NoWarn>CA1416</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.4" />
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="10.0.2" />
+    <PackageReference Include="System.ServiceProcess.ServiceController" Version="10.0.2" />
   </ItemGroup>
 
 </Project>
