--- a/TrackingPixel.Modern/appsettings.json
+++ b/TrackingPixel.Modern/appsettings.json
@@ -24,6 +24,7 @@
   "Tracking": {
     "BaseUrl": "https://smartpixl.info",
     "ConnectionString": "Server=localhost\\SQL2025;Database=SmartPiXL;Integrated Security=True;TrustServerCertificate=True",
+    "DashboardAllowedIPs": [ "8.27.24.2" ],
     "QueueCapacity": 10000,
     "BatchSize": 100,
     "BatchTimeoutMs": 100,
