feat: IP geolocation integration (P1 roadmap)
- GeoCacheService: two-tier in-memory cache (ConcurrentDict + MemoryCache)
  Non-blocking TryLookup() on hot path, async SQL backfill on miss
- IpApiSyncService: daily incremental sync from Xavier IPGEO -> local IPAPI.IP
  Uses Last_Seen watermark, MERGE via staging table, ~6M rows/day
- GeoResult model: readonly record struct, zero GC on hot path
- Hot-path enrichment: _srv_geoCC, geoCity, geoTz, geoISP, geoProxy, geoMobile
- Timezone mismatch bot signal: _srv_geoTzMismatch=1 when client TZ != IP TZ
- ETL.usp_EnrichParsedGeo: backfills PiXL.Parsed + PiXL.IP from IPAPI.IP
- SQL: 13 geo columns on PiXL.IP, 10 on PiXL.Parsed, IPAPI.SyncLog table
- Config: XavierConnectionString + IpApiSyncHourUtc in TrackingSettings

--- a/TrackingPixel.Modern/appsettings.json
+++ b/TrackingPixel.Modern/appsettings.json
@@ -24,6 +24,8 @@
   "Tracking": {
     "BaseUrl": "https://smartpixl.info",
     "ConnectionString": "Server=localhost\\SQL2025;Database=SmartPiXL;Integrated Security=True;TrustServerCertificate=True",
+    "XavierConnectionString": "Server=192.168.88.35;Database=IPGEO;Integrated Security=True;TrustServerCertificate=True",
+    "IpApiSyncHourUtc": 2,
     "DashboardAllowedIPs": [ "8.27.24.2" ],
     "QueueCapacity": 10000,
     "BatchSize": 100,
