--- a/TrackingPixel.Modern/appsettings.json
+++ b/TrackingPixel.Modern/appsettings.json
@@ -11,6 +11,9 @@
     "Endpoints": {
       "Http": {
         "Url": "http://*:7000"
+      },
+      "Https": {
+        "Url": "https://*:7001"
       }
     },
     "Limits": {
