Add TRON Dashboard  Godot 4.6 light cycle arena
Procedural TRON Legacy-style arena built in Godot 4.6 (C#/.NET 8):
- World-space grid shader with fwidth() AA, distance fade, border seam glow
- Procedural wall shader: dark metallic panels with hairline emissive seams
- Multi-part light cycles with torus wheel rims (named + ambient AI)
- Hard-light trail shader with PBR emission + dissolve derezz
- Full post-processing: ACES tonemap, bloom, SSR, SSIL, volumetric fog
- ApiClient for live SmartPiXL dashboard data integration
- Screenshot analyzer (analyze_screenshot.py) for visual QA

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,11 @@ Thumbs.db
 *.tmp
 *.temp
 .nuget/
+
+# Node / Puppeteer (screenshot tooling)
+node_modules/
+package-lock.json
+
+# TRON screenshots & artifacts
+TronDashboard/Screenshots/
+tron-lab-screenshot-*.png
