Phase 4: Tier 1 enrichment services (bot, UA, DNS, MaxMind, IPAPI, WHOIS)
- 6 enrichment services in SmartPiXL.Forge/Services/Enrichments/
- 8 NuGet packages (NetCrawlerDetect, UAParser, DeviceDetector.NET, DnsClient, MaxMind.GeoIP2, Whois, MathNet.Numerics, FuzzySharp)
- EnrichmentPipelineService rewritten with full Tier 1 chain
- SQL migration 42: 19 new columns on PiXL.Parsed + ETL Phase 8B
- 48 new unit tests (217 total, all passing)
- 0 warnings, 0 errors

--- a/SmartPiXL.Forge/SmartPiXL.Forge.csproj
+++ b/SmartPiXL.Forge/SmartPiXL.Forge.csproj
@@ -15,10 +15,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DeviceDetector.NET" Version="6.4.7" />
+    <PackageReference Include="DnsClient" Version="1.8.0" />
+    <PackageReference Include="FuzzySharp" Version="2.0.2" />
+    <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
+    <PackageReference Include="MaxMind.GeoIP2" Version="5.4.1" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.4" />
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="10.0.2" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="10.0.0" />
+    <PackageReference Include="NetCrawlerDetect" Version="1.2.113" />
     <PackageReference Include="System.ServiceProcess.ServiceController" Version="10.0.2" />
+    <PackageReference Include="UAParser" Version="3.1.47" />
+    <PackageReference Include="Whois" Version="3.0.1" />
   </ItemGroup>
 
   <ItemGroup>
