--- a/SmartPiXL.Forge/SmartPiXL.Forge.csproj
+++ b/SmartPiXL.Forge/SmartPiXL.Forge.csproj
@@ -14,6 +14,11 @@
     <NoWarn>CA1416</NoWarn>
   </PropertyGroup>
 
+  <!-- Allow test project to access internal types (e.g., QueryParamReader) -->
+  <ItemGroup>
+    <InternalsVisibleTo Include="TrackingPixel.Tests" />
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="DeviceDetector.NET" Version="6.4.7" />
     <PackageReference Include="DnsClient" Version="1.8.0" />
