Phase 6: Tier 3 enrichments — asymmetric detection (471/471 tests, 0W/0E)
New services:
- ContradictionMatrixService: 13 cross-signal contradiction rules with severity tiers
- GeographicArbitrageService: 7-signal cultural consistency scoring (fonts, lang, TZ, calendar)
- DeviceAgeEstimationService: GPU/OS/browser age triangulation with 3 anomaly detectors
- BehavioralReplayService: FNV-1a mouse path replay detection with fingerprint correlation
- DeadInternetService: per-company compound bot traffic index (24h sliding window)

Supporting:
- CulturalReference: static reference data for cultural fingerprinting
- GpuTierReference.EstimateReleaseYear(): ~70 GPU-to-release-year mappings
- SQL migration 44: 9 Tier 3 columns on PiXL.Parsed + Phase 8D in ETL proc
- Pipeline restructured: lead scoring moved from step 10 to step 15 (after Tier 3)
- Fixed: InternalsVisibleTo + test project reference for SmartPiXL.Tests
- 89 new tests (471 total)

--- a/SmartPiXL.Forge/SmartPiXL.Forge.csproj
+++ b/SmartPiXL.Forge/SmartPiXL.Forge.csproj
@@ -16,7 +16,7 @@
 
   <!-- Allow test project to access internal types (e.g., QueryParamReader) -->
   <ItemGroup>
-    <InternalsVisibleTo Include="TrackingPixel.Tests" />
+    <InternalsVisibleTo Include="SmartPiXL.Tests" />
   </ItemGroup>
 
   <ItemGroup>
