Phase 7: CLR assembly + vector + graph infrastructure
SmartPiXL.SqlClr project (net48 — SQL Server 2025 CLR is .NET Framework 4.x):
- GetSubnet24: IPv4 → /24 subnet string
- RegexExtract + RegexMatch: compiled regex with LRU cache
- FeatureBitmap (17), AccessibilityBitmap (9), BotBitmap (20), EvasionBitmap (8)
- MurmurHash3: 128-bit x64 non-crypto hash → BINARY(16)
- JaroWinkler + LevenshteinDistance: fuzzy string matching

SQL migrations:
- 45: SmartPiXL_CLR database, certificate signing, UNSAFE assembly, 10 wrapper
  functions, 10 synonyms in SmartPiXL.dbo for transparent cross-db access
- 46: PiXL.Device.FingerprintVector VECTOR(64), UaVector VECTOR(32)
- 47: Graph schema with Device/Person/IpAddress nodes, UsesIP/ResolvesTo edges

52 new tests (523 total), 0 warnings, 0 errors.

Key decisions:
- net48 required (net10.0 rejected by SQL CLR host: sys.dm_clr_properties = v4.0.30319)
- UNSAFE permission needed for Regex + ConcurrentDictionary (SAFE blocks them)
- VECTOR_DISTANCE works inline but has RTM-GDR bug with variables/CROSS JOIN

--- a/SmartPiXL.Tests/SmartPiXL.Tests.csproj
+++ b/SmartPiXL.Tests/SmartPiXL.Tests.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
+    <NoWarn>$(NoWarn);NU1702</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
@@ -25,6 +26,9 @@
     <ProjectReference Include="..\SmartPiXL\SmartPiXL.csproj" />
     <ProjectReference Include="..\SmartPiXL.Forge\SmartPiXL.Forge.csproj" />
     <ProjectReference Include="..\SmartPiXL.Shared\SmartPiXL.Shared.csproj" />
+    <ProjectReference Include="..\SmartPiXL.SqlClr\SmartPiXL.SqlClr.csproj">
+      <NoWarn>NU1702</NoWarn>
+    </ProjectReference>
   </ItemGroup>
 
 </Project>
