Session sync: Sentinel Atlas portal, Forge pipe listener updates, agent/prompt additions, dashboard view perf fix

--- a/SmartPiXL.Forge/appsettings.json
+++ b/SmartPiXL.Forge/appsettings.json
@@ -1,9 +1,9 @@
 {
   "Tracking": {
-    "ConnectionString": "Server=localhost\\SQL2025;Database=SmartPiXL;Integrated Security=True;Encrypt=True;TrustServerCertificate=True",
+    "ConnectionString": "Server=localhost\\SQL2025;Database=SmartPiXL;User Id=SmartPiXL;Password=OVERRIDE_VIA_ENV;TrustServerCertificate=True;Encrypt=True",
     "EdgeBaseUrl": "http://192.168.88.176",
-    "XavierConnectionString": "Server=192.168.88.35;Database=IPGEO;Integrated Security=True;Encrypt=True;TrustServerCertificate=True",
-    "XavierSmartPiXLConnectionString": "Server=192.168.88.35;Database=SmartPiXL;Integrated Security=True;Encrypt=True;TrustServerCertificate=True",
+    "XavierConnectionString": "Server=192.168.88.35;Database=IPGEO;User Id=SmartPiXL;Password=OVERRIDE_VIA_ENV;Encrypt=True;TrustServerCertificate=True",
+    "XavierSmartPiXLConnectionString": "Server=192.168.88.35;Database=SmartPiXL;User Id=SmartPiXL;Password=OVERRIDE_VIA_ENV;Encrypt=True;TrustServerCertificate=True",
     "SyncIntervalHours": 6,
     "IpApiSyncHourUtc": 2,
     "QueueCapacity": 10000,
