--- a/SmartPiXL.Sentinel/appsettings.json
+++ b/SmartPiXL.Sentinel/appsettings.json
@@ -17,7 +17,7 @@
 
   "Tracking": {
     "BaseUrl": "https://smartpixl.info",
-    "ConnectionString": "Server=localhost\\SQL2025;Database=SmartPiXL;Integrated Security=True;Encrypt=True;TrustServerCertificate=True",
+    "ConnectionString": "Server=localhost\\SQL2025;Database=SmartPiXL;User Id=SmartPiXL;Password=OVERRIDE_VIA_ENV;TrustServerCertificate=True;Encrypt=True",
     "EdgeBaseUrl": "http://192.168.88.176",
     "DashboardAllowedIPs": [ "8.27.24.2" ],
     "SmtpHost": "vrz-sms.mx.a.cloudfilter.net",
