--- a/SmartPiXL/appsettings.json
+++ b/SmartPiXL/appsettings.json
@@ -26,9 +26,9 @@
   
   "Tracking": {
     "BaseUrl": "https://smartpixl.info",
-    "ConnectionString": "Server=localhost\\SQL2025;Database=SmartPiXL;Integrated Security=True;Encrypt=True;TrustServerCertificate=True",
-    "XavierConnectionString": "Server=192.168.88.35;Database=IPGEO;Integrated Security=True;Encrypt=True;TrustServerCertificate=True",
-    "XavierSmartPiXLConnectionString": "Server=192.168.88.35;Database=SmartPiXL;Integrated Security=True;Encrypt=True;TrustServerCertificate=True",
+    "ConnectionString": "Server=localhost\\SQL2025;Database=SmartPiXL;User Id=SmartPiXL;Password=OVERRIDE_VIA_ENV;TrustServerCertificate=True;Encrypt=True",
+    "XavierConnectionString": "Server=192.168.88.35;Database=IPGEO;User Id=SmartPiXL;Password=OVERRIDE_VIA_ENV;Encrypt=True;TrustServerCertificate=True",
+    "XavierSmartPiXLConnectionString": "Server=192.168.88.35;Database=SmartPiXL;User Id=SmartPiXL;Password=OVERRIDE_VIA_ENV;Encrypt=True;TrustServerCertificate=True",
     "IpApiSyncHourUtc": 2,
     "SyncIntervalHours": 6,
     "DashboardAllowedIPs": [ "8.27.24.2" ],
